# dataprofile

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: superlinter.yml
dataprofile/: __init__.py  _monitor.py  _profiling.py  _var_statistics.c  _var_statistics.py  _var_statistics.pyx  batch_cli_reports.py  cli_report.py  collect_stats.py  config.py  descriptive_report.py  reporting.py  setup.py  var_statistics.py  viz.py
dataprofile/tests/: conftest.py  test__profiling.py  test__var_statistics.py
datareport/: __init__.py  collect_stats.py  config.py  descriptive_report.py  var_statistics.py
docs/: Dockerfile  Makefile  make.bat
docs/docker/: build_docker.sh  run_docker.sh
docs/source/: collect_stats.rst  conf.py  config.rst  dataprofile.rst  datareport.rst  descriptive_report.rst  index.rst  modules.rst  var_statistics.rst  viz.rst
notebook/: example.ipynb
sample_reports/titanic/: report_titanic.html  report_titanic.md  report_titanic.txt
scripts/: __init__.py  add_alias_to_env.py  build_docker.sh  cli_report.py  generate_sample_reports.py  monitor.py  render_sample_reports.py  run_docker.sh
scripts/docker/: build_docker.sh  pull_docker.sh  push_docker.sh  run_docker.sh  update_docker.sh
src/: __init__.py  collect_stats.py  descriptive_report.py
src/indsdk/: descriptive_report.py
tests/: conftest.py  test__profiling.py  test__var_statistics.py
tests/data_report/: test_collect_stats.py  test_var_statistics.py
tests/datareport/: test_collect_stats.py  test_var_statistics.py
tmp/indsdk/: __init__.py  collect_stats.py  var_statistics.py
